@@ -6,6 +6,9 @@ Ubuntu 12.04: Python 2.7, BDB 4.8 (legacy), BDB 5.1 used by the system. Supporte
 6.2.0:
   * Support Berkeley DB 6.2.x.
   * Declare Python 3.5 support for PyPI.
+  * Drop support for Python 3.2. If you need
+    compatibility with that version, you can keep using
+    old releases of these bindings.
 
 6.1.1:
   * Compatibility with Python 3.5.
